data/derived/comb/progs/unify/prog8667.ml.out
Characters 18-23:
  let _ = sepConcat "---" [];;
                    ^^^^^
Error: This expression has type string but an expression was expected of type
         string list
